--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <script>window.location = 'https://github.com/v5analytics/simple-orm/blob/master/README.md'</script>
+        <a href="https://github.com/v5analytics/simple-orm/blob/master/README.md">README.md</a>
       </section>
     </div>
 
